# video_player

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/basic/: Clock.cpp  Clock.hpp  EventHandler.cpp  EventHandler.hpp  GuiHandler.cpp  GuiHandler.hpp  Player.cpp  Player.hpp  teste.cpp
src/core/: Application.cpp  Application.hpp  Event.hpp  FontManager.cpp  FontManager.hpp  Layer.hpp  Window.cpp  Window.hpp
src/stream/: AudioStream.cpp  AudioStream.hpp  Stream.cpp  Stream.hpp  VideoStream.cpp  VideoStream.hpp
src/ui/: ClayInit.hpp  VideoUI.cpp  VideoUI.hpp  layout.c  layout.h
src/video/: AudioConsumer.cpp  AudioConsumer.hpp  AudioData.hpp  Decoders.cpp  Decoders.hpp  Deleters.hpp  Deque.cpp  Deque.hpp  MediaFile.cpp  MediaFile.hpp  Video.cpp  Video.hpp  VideoData.hpp
